  - [14 Mar 01] Added option "-blang": if no language is specified in
    the request (i.e. explicitely selected by a flag, for example), choose
    preferably the user preferred language (the one of his browser) rather
    than the default data base language.
  - [13 Mar 01] Fixed problem in displaying "anniversaries month"
    in Estonian: the month appeared with all its declinations.

* Lexicon (lang/lexicon.txt)
  - [14 Mar 01] Added the ability to add "derived" languages,
    i.e. languages where most of the phrases are the same than some other
    already existing language, but with some changes here and there. In
    the lexicon, one can write a line with "xx=yy" to indicate that, where
    xx is the derived language and yy the initial language.
  - [14 Mar 01] Changed the French translation of "nth cousin":
    indeed, in French, the "nth cousin" is translated, litterally, by
    "cousin of the pth degree" where "p" is "n+1": e.g. a "4th cousin" is
    "a cousin of the 5th degree". Perhaps the same thing has to be done
    in other languages...
  - [14 Mar 01] Changed the "*nth (cousin)*" entry to directly
    represent what has to be used to translate the "nth". Previously, it
    was "indirect", looking for another entry in the lexicon, which was
    complicated to understand, for the GeneWeb translators.

* Templates files (etc/*.txt)
  For programmers...
  - [17 Mar 01] File perso.txt: remplaced variables %length and %count
    by %nb_families, %family_cnt, %nb_children, %child_cnt.

GeneWeb version 4.00
--------------------

The new version number (4.00) is in honour of:
   1/ the new installer for Windows
   2/ the new port to MacOS X.

* Installation
  - [04 Mar 01] Added version for MacOS X.
  - [03 Mar 01] Changed Linux rpm package installation; it uses now
    another directory for data bases (/home/geneweb/bases). Not removed
    when unstallation, it can be used for the future GeneWeb versions,
    without requiring it to be moved.